nix-compat-derive-tests/tests/ui/deserialize_try_from_missing.rs
use nix_compat_derive::NixDeserialize;

#[derive(NixDeserialize)]
#[nix(try_from = "u64")]
pub struct Test;

fn main() {}
